--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -1931,7 +1931,7 @@ output {
   display: block;
   width: 100%;
   height: 34px;
-  padding: 6px 12px;
+  padding: 6px 12px 6px 34px;
   font-size: 14px;
   line-height: 1.428571429;
   color: #555555;
