--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -49,15 +49,21 @@ body {
 
 a {
   background: transparent;
+  -webkit-transition: 0.25s linear; /* Safari and Chrome */
+     -moz-transition: 0.25s linear; /* Firefox 4 */
+       -o-transition: 0.25s linear; /* Opera */
+          transition: 0.25s linear;
 }
 
 a:focus {
-  outline: thin dotted;
+  outline: 0;
+  color: #0000c0;
 }
 
 a:active,
 a:hover {
   outline: 0;
+  color: #0000c0;
 }
 
 h1 {
@@ -160,6 +166,8 @@ textarea {
 button,
 input {
   line-height: normal;
+  -webkit-transition: 0.25s linear;
+          transition: 0.25s linear;
 }
 
 button,
@@ -3514,6 +3522,7 @@ input[type="button"].btn-block {
 
 .dropdown {
   position: relative;
+
 }
 
 .dropdown-toggle:focus {
@@ -3528,7 +3537,7 @@ input[type="button"].btn-block {
   display: none;
   float: left;
   min-width: 160px;
-  padding: 5px 0;
+  padding: 0;
   margin: 2px 0 0;
   font-size: 14px;
   list-style: none;
@@ -3539,6 +3548,10 @@ input[type="button"].btn-block {
   -webkit-box-shadow: 0 6px 12px rgba(0, 0, 0, 0.175);
           box-shadow: 0 6px 12px rgba(0, 0, 0, 0.175);
   background-clip: padding-box;
+  -webkit-transition:.2s ease-out; /* Safari 和 Chrome */
+     -moz-transition:.2s ease-out; /* Firefox 4 */
+       -o-transition:.2s ease-out; /* Opera */
+          transition:.2s ease-out;
 }
 
 .dropdown-menu.pull-right {
@@ -3555,7 +3568,7 @@ input[type="button"].btn-block {
 
 .dropdown-menu > li > a {
   display: block;
-  padding: 3px 20px;
+  padding: 8px 20px;
   clear: both;
   font-weight: normal;
   line-height: 1.428571429;
@@ -3567,7 +3580,8 @@ input[type="button"].btn-block {
 .dropdown-menu > li > a:focus {
   color: #262626;
   text-decoration: none;
-  background-color: #f5f5f5;
+  border-radius: 4px;
+  background-color: #00ffcc;
 }
 
 .dropdown-menu > .active > a,
@@ -4543,6 +4557,10 @@ textarea.input-group-sm > .input-group-btn > .btn {
   padding-top: 10px;
   padding-bottom: 10px;
   line-height: 20px;
+  -webkit-transition:background-color 0.25s linear, color 0.25s linear; /* Safari and Chrome */
+     -moz-transition:background-color 0.25s linear, color 0.25s linear; /* Firefox 4 */
+       -o-transition:background-color 0.25s linear, color 0.25s linear; /* Opera */
+          transition:background-color 0.25s linear, color 0.25s linear;
 }
 
 @media (max-width: 767px) {
@@ -5228,7 +5246,6 @@ a.list-group-item.active > .badge,
   font-weight: 200;
   line-height: 2.1428571435;
   color: inherit;
-  background-color: #eeeeee;
 }
 
 .jumbotron h1,
