--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -835,8 +835,8 @@ pre code {
 }
 
 .row {
-  margin-right: -15px;
-  margin-left: -15px;
+  margin-right: 0;
+  margin-left: 0;
 }
 
 .row:before,
@@ -1939,7 +1939,7 @@ output {
   display: block;
   width: 100%;
   height: 34px;
-  padding: 6px 12px 6px 34px;
+  padding: 6px 12px;
   font-size: 14px;
   line-height: 1.428571429;
   color: #555555;
@@ -3534,11 +3534,13 @@ input[type="button"].btn-block {
   top: 100%;
   left: 0;
   z-index: 1000;
-  display: none;
+  display: block;
+  visibility: hidden;
+  opacity: 0;
   float: left;
   min-width: 160px;
   padding: 0;
-  margin: 2px 0 0;
+  margin: -2pc 0 0;
   font-size: 14px;
   list-style: none;
   background-color: #ffffff;
@@ -3548,10 +3550,16 @@ input[type="button"].btn-block {
   -webkit-box-shadow: 0 6px 12px rgba(0, 0, 0, 0.175);
           box-shadow: 0 6px 12px rgba(0, 0, 0, 0.175);
   background-clip: padding-box;
-  -webkit-transition:.2s ease-out; /* Safari 和 Chrome */
-     -moz-transition:.2s ease-out; /* Firefox 4 */
-       -o-transition:.2s ease-out; /* Opera */
-          transition:.2s ease-out;
+  -webkit-transition:all .2s ease-in-out; /* Safari 和 Chrome */
+     -moz-transition:all .2s ease-in-out; /* Firefox 4 */
+       -o-transition:all .2s ease-in-out; /* Opera */
+          transition:all .2s ease-in-out;
+}
+
+.open > .dropdown-menu {
+  margin-top: 0px !important;
+  opacity: 1;
+  visibility: visible;
 }
 
 .dropdown-menu.pull-right {
