--- a/css/baidu.css
+++ b/css/baidu.css
@@ -1,8 +1,13 @@
 
 h1{
-    text-align: center;
-    color: #000;
-    margin: 20px 0;
+  margin: 12px 0 0 0;
+  line-height: 150%; 
+  color: #000;
+  letter-spacing: 2px;
+  font-size: 35px;
+  font-weight: bold;
+  font-family: 'Segoe UI', Arial, 'Microsoft Yahei', Simsun, sans-serif;
+  text-align: center;
 }
 
 body{
@@ -122,7 +127,6 @@ div.row > div > p{
   line-height: 150%; 
   color: #000;
   font-family: 'Segoe UI', Arial, 'Microsoft Yahei', Simsun, sans-serif;
-
 }
 
 div.row > div > h3{
@@ -207,7 +211,8 @@ div.login_group > p > input.form-control{
 }
 
 input#login_password,
-input#login_username{
+input#login_username,
+input.form_padding{
   padding-left: 36px;  
 }
 
@@ -220,6 +225,21 @@ input.login_submit{
   width: 100%;
 }
 
+form.reg_form{
+  background-color: #e8e8e8;
+  border-radius: 4px;
+  padding: 30px;
+}
+
+form.reg_form > div{
+  margin-top: 10px;
+}
+
+div.callback_error > p{
+    font-size: 14px;
+    color: #ff0000;
+    font-weight: bold;
+}
 
 /* footer style*/
 div.footer{
@@ -249,4 +269,7 @@ footer > hr{
   background-color: #ffddee;
 }
 
+.light_grey{
+  background-color: #f0f0f0;
+}
 /*transition*/
